# ooRexx-5.1.0

./: CMakeLists.txt  CMakeLists.txt.bakup  CMakeLists.txt.orig  Info.plist  NOTICE-ooRexx  README.md  config.h.in.sorted  config.h.in.test  hdrcheck_ooRexx-5_1_0.txt  prova.rex  zcleanup.sh  zcpyrdate.rex
api/: oorexxapi.h  oorexxerrors.h  rexx.h  rexxapidefs.h
cmake/Modules/: buildExecutable.cmake  buildLibrary.cmake.none
cmake/Modules.check/: dirnames.cmake  hostemu_SPECS.cmake  rexxapi_SPECS.cmake  rexxc_exe_SPECS.cmake  rxapi_exe_SPECS.cmake  rxunixsys_SPECS.cmake
cmake/Modules.orig/: config.h.in.cmake  ooRexx_HDRS.cmake  rexx_SRCS.cmake  rexxapi_SRCS.cmake  rexxc_exe_SRCS.cmake  rexximage_exe_SRCS.cmake  rxmath_SRCS.cmake  rxqueue_exe_SRCS.cmake  rxsock_SRCS.cmake  rxsubcom_exe_SRCS.cmake
cmake/SPECS/: dirnames.cmake  functions.cmake  hostemu_SPECS.cmake  orxncurses_SPECS.cmake  rexx_SPECS.cmake  rexx_exe_SPECS.cmake  rexximage_exe_SPECS.cmake  rxmath_SPECS.cmake  rxncurses_SPECS.cmake  rxregexp_SPECS.cmake  rxsock_SPECS.cmake  rxunixsys_SPECS.cmake  sysFunctions.cmake  sysHeaders.cmake
cmake/TEMPL/: ooRexxConfig.cmake.in
cmake/snippets/: functions.rex  functions.txt  headers.rex  headers.txt
common/: BitSet.hpp  FlagSet.hpp  SynchronizedBlock.hpp  Utilities.cpp  Utilities.hpp
extensions/csvStream/: csvStream.cls
extensions/hostemu/: cmdparse.cpp  cmdparse.hpp  cmdparse.ypp  hostemu.h
extensions/orxncurses/: orxncurses.cpp
extensions/rxmath/: rxmath.cpp
extensions/rxregexp/: automaton.cpp  automaton.hpp  dblqueue.cpp  dblqueue.hpp  regexp.hpp  rxregexp.cpp
extensions/rxsock/: rxsock.cpp  rxsock.h  rxsockfn.cpp
internals/: RexxInternalApis.h
interpreter/api/: CallContextStubs.cpp  ContextApi.hpp  InterpreterAPI.cpp  InterpreterInstanceStubs.cpp  MethodContextStubs.cpp  ThreadContextStubs.cpp
interpreter/behaviour/: ClassTypeCodes.h  MethodDictionary.cpp  MethodDictionary.hpp  PrimitiveBehaviourNames.h  PrimitiveBehaviours.cpp  RexxBehaviour.cpp  RexxBehaviour.hpp  VirtualFunctionTable.cpp
interpreter/classes/: ArrayClass.cpp  ArrayClass.hpp  BagClass.cpp  BagClass.hpp  BufferClass.cpp  BufferClass.hpp  ClassClass.cpp  ClassClass.hpp  ContextClass.cpp  ContextClass.hpp  DirectoryClass.cpp  DirectoryClass.hpp  EventSemaphore.cpp  EventSemaphore.hpp  IdentityTableClass.cpp  IdentityTableClass.hpp  IntegerClass.cpp  IntegerClass.hpp  ListClass.cpp  ListClass.hpp  MessageClass.cpp  MessageClass.hpp  MethodClass.cpp  MethodClass.hpp  MutableBufferClass.cpp  MutableBufferClass.hpp  MutexSemaphore.cpp  MutexSemaphore.hpp  NumberStringClass.cpp  NumberStringClass.hpp  NumberStringMath.cpp  NumberStringMath2.cpp  ObjectClass.cpp  ObjectClass.hpp  PackageClass.cpp  PackageClass.hpp  PointerClass.cpp  PointerClass.hpp  QueueClass.cpp  QueueClass.hpp  (+31 more)
interpreter/concurrency/: ActivationApiContexts.hpp  ActivationFrame.cpp  ActivationFrame.hpp  Activity.cpp  Activity.hpp  ActivityDispatcher.cpp  ActivityDispatcher.hpp  ActivityManager.cpp  ActivityManager.hpp  CallbackDispatcher.cpp  CallbackDispatcher.hpp  CommandHandler.cpp  CommandHandler.hpp  ConditionTrappingDispatcher.cpp  ConditionTrappingDispatcher.hpp  ExitHandler.cpp  ExitHandler.hpp  MessageDispatcher.cpp  MessageDispatcher.hpp  RexxStartDispatcher.cpp  RexxStartDispatcher.hpp  TranslateDispatcher.cpp  TranslateDispatcher.hpp  TrappingDispatcher.cpp  TrappingDispatcher.hpp
interpreter/execution/: ActivationBase.hpp  ActivationSettings.cpp  ActivationSettings.hpp  ActivationStack.cpp  ActivationStack.hpp  BaseCode.cpp  BaseCode.hpp  BaseExecutable.cpp  BaseExecutable.hpp  CPPCode.cpp  CPPCode.hpp  NativeActivation.cpp  NativeActivation.hpp  NativeCode.cpp  NativeCode.hpp  PackageSetting.hpp  RexxActivation.cpp  RexxActivation.hpp  RexxCode.cpp  RexxCode.hpp  RexxLocalVariables.cpp  RexxLocalVariables.hpp  RexxVariable.cpp  RexxVariable.hpp  SecurityManager.cpp  SecurityManager.hpp  TraceSetting.cpp  TraceSetting.hpp  TrapHandler.cpp  TrapHandler.hpp  VariableDictionary.cpp  VariableDictionary.hpp
interpreter/expression/: BuiltinFunctions.cpp  BuiltinFunctions.hpp  CommonExternalFunctions.cpp  ExpressionBaseVariable.hpp  ExpressionClassResolver.cpp  ExpressionClassResolver.hpp  ExpressionCompoundVariable.cpp  ExpressionCompoundVariable.hpp  ExpressionDotVariable.cpp  ExpressionDotVariable.hpp  ExpressionFunction.cpp  ExpressionFunction.hpp  ExpressionList.cpp  ExpressionList.hpp  ExpressionLogical.cpp  ExpressionLogical.hpp  ExpressionMessage.cpp  ExpressionMessage.hpp  ExpressionOperator.cpp  ExpressionOperator.hpp  ExpressionQualifiedFunction.cpp  ExpressionQualifiedFunction.hpp  ExpressionStack.cpp  ExpressionStack.hpp  ExpressionStem.cpp  ExpressionStem.hpp  ExpressionVariable.cpp  ExpressionVariable.hpp  IndirectVariableReference.cpp  IndirectVariableReference.hpp  SpecialDotVariable.cpp  SpecialDotVariable.hpp  VariableReferenceOp.cpp  VariableReferenceOp.hpp
interpreter/instructions/: AddressInstruction.cpp  AddressInstruction.hpp  AddressWithInstruction.cpp  AddressWithInstruction.hpp  AssignmentInstruction.cpp  AssignmentInstruction.hpp  BaseDoInstruction.cpp  DoBlock.cpp  (+103 more)
samples/: arithmeticEvaluation.rex  arrayCallback.rex  ccreply.rex  concurrency.rex  constrained.rex  delegation.rex  dynamicMethod.rex  factor.rex  getOoRexxDocs.rex  greply.rex  guess.rex  interface.rex  ktguard.rex  makestring.rex  month.rex  philfork.rex  properties.rex  qdate.rex  qtime.rex  rexxcps.rex  rexxtry.rex  scclient.rex  scserver.rex  sfclient.rex  sfserver.rex  singleLinkedList.rex  sortComposite.rex  stack.rex  synchronousConcurrency.rex  timezone.rex  treeTraversal.rex  usecomp.rex  usepipe.rex  usesingleton.rex  usetree.rex
support/: build_installer.sh  install_manifest.sh  path.append  path.here  portable-CMakeLists-section.txt
testbinaries/: orxclassic.cpp  orxclassic1.c  orxclassicexits.cpp  orxexits.hpp  orxfunction.cpp  orxinstance.cpp  orxinvocation.cpp  orxmethod.cpp  rexxinstance.cpp
ztest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  vars_for_main_at_exit.txt
(+636 files in other folders)
